Update README Testing
Signed-off-by: Salendarsingh Gaud <sgaud@qti.qualcomm.com>

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Linux kernel staging
+Test Linux kernel staging
 ============
 test
 There are several guides for kernel developers and users. These guides can
