--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Linux kernel staging
+Yocto Build Test Linux kernel staging
 ============
 test
 There are several guides for kernel developers and users. These guides can
